fixed siders on ie

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -713,6 +713,7 @@
     align-items: center;
     justify-content: center;
     transition: all .3s ease;
+    font-size: 0;
 
     &:hover {
         background-color: $blue;
